Closed Bug 1909897 Opened 1 year ago Closed 1 year ago

[mips] Failed to build js (error: call to deleted function 'patchFarJump')

Categories

(Core :: JavaScript Engine: JIT, defect, P1)

Firefox 130
defect

Tracking

()

RESOLVED FIXED
130 Branch
Tracking Status
firefox-esr115 --- unaffected
firefox-esr128 --- unaffected
firefox128 --- unaffected
firefox129 --- unaffected
firefox130 --- fixed

People

(Reporter: flygoat, Assigned: flygoat)

References

(Blocks 1 open bug, Regression)

Details

(Keywords: regression)

Attachments

(1 file)

JS Engine FTBFS on MIPS due to change 1905716.

Error message:
error: call to deleted function 'patchFarJump'

Patch on the way.

Keywords: regression
Regressed by: 1905716

:rhunt, since you are the author of the regressor, bug 1905716, could you take a look? Also, could you set the severity field?

For more information, please visit BugBot documentation.

Flags: needinfo?(rhunt)
Flags: needinfo?(rhunt) → needinfo?(zhaojiazhong-hf)
Assignee: nobody → jiaxun.yang
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Blocks: sm-mips
Severity: -- → S3
Priority: -- → P1

Thanks Jiaxun for the work!

Flags: needinfo?(zhaojiazhong-hf)
Pushed by rhunt@eqrion.net: https://hg.mozilla.org/integration/autoland/rev/a97e683001bc Implement MacroAssembler::patchFarJump for MIPS. r=rhunt
Status: ASSIGNED → RESOLVED
Closed: 1 year ago
Resolution: --- → FIXED
Target Milestone: --- → 130 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: