Bug 1909897: Implement MacroAssembler::patchFarJump for MIPS. r=rhunt

Port D215415 to MIPS.

Differential Revision: https://phabricator.services.mozilla.com/D217738